--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -128,8 +128,9 @@
             
       In diesem Kapitel werden 2 Systeme vorgestellt und die entsprechenden Matrizen berechnet:
       das erste ist ein Längsschwinger-System in einer Dimension, das zweite ein Längsschwinger in 2 Dimensionen.
-      
 
+
+% Erklärung x und anderes einfügen, auch Def Schwingersysteme
       Hier folgen nun Bilder, um die Systeme zu veranschaulichen:
 
       \begin{figure}[ht]
