lineare algebra hinzugefügt

--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -123,3 +123,13 @@
     url={https://www.georgi-dd.de/files/a22.pdf},
     urldate={2024-09-04T09:49:00}
 }
+
+@misc {LinAlgKowalsky,
+    author = { Kowalsky, Hans-Joachim },
+    title = { Lineare Algebra },
+    edition = { 2. Aufl. Reprint 2019 } ,
+    publisher = {De Gruyter},
+    isbn = {9783111337579},
+    year = {2019},
+    url = { https://katalog.slub-dresden.de/id/0-1667384449 }
+}
