conjugate Transpose hinzugefügt

--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -133,3 +133,10 @@
     year = {2019},
     url = { https://katalog.slub-dresden.de/id/0-1667384449 }
 }
+
+@online{conjugateTranspose,
+    author={Weisstein, Eric W.},
+    title={"Conjugate Transpose."},
+    url={https://mathworld.wolfram.com/ConjugateTranspose.html},
+    urldate={2024-09-06T:10:16:00}
+}
