fontspec statt fontenc, um ß richtig darzustellen

--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -1,6 +1,7 @@
 \documentclass[ngerman,BCOR=4mm]{tudscrreprt}
 
-\usepackage[T1]{fontenc}
+% \usepackage[T1]{fontenc}
+\usepackage[T1]{fontspec}
 \usepackage[ngerman=ngerman]{hyphsubst}
 \usepackage[ngerman]{babel}
 \usepackage{isodate}
@@ -170,7 +171,7 @@
             \begin{definition}
                   Ein Pencil heißt regulär, falls $B$ invertierbar ist.
             \end{definition}
-Quelle einfügen
+% Quelle einfügen
 
             Man beachte, dass für einen regulären Pencil gilt:
             $$(\AlamB)x = 0 \Leftrightarrow (B^{-1}A - \lambda \In)x = 0$$
