--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -1,6 +1,7 @@
 \documentclass[ngerman,BCOR=4mm]{tudscrreprt}
 
 % \usepackage[T1]{fontenc}
+% fontspec ist für xelatex, fontenc für pdflatex
 \usepackage[T1]{fontspec}
 \usepackage[ngerman=ngerman]{hyphsubst}
 \usepackage[ngerman]{babel}
