--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -1,4 +1,5 @@
-\documentclass[a4paper,12pt,leqno]{report}
+\documentclass[a4paper,12pt]{report}
+% es wurde leqno entfernt, da damit die Nummern von Gleichungen links standen
 \usepackage{inputenc,fontenc}
 \usepackage[a4paper,margin=3cm]{geometry}
 \usepackage[english, german]{babel}
