--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -138,5 +138,5 @@
     author={Weisstein, Eric W.},
     title={"Conjugate Transpose."},
     url={https://mathworld.wolfram.com/ConjugateTranspose.html},
-    urldate={2024-09-06T:10:16:00}
+    urldate={2024-09-06T10:16:00}
 }
